name:               ekg
version:            0.4.0.16
cabal-version:      >=1.8
synopsis:           Remote monitoring of processes
description:
  This library lets you remotely monitor a running process over HTTP.
  It provides a simple way to integrate a monitoring server into any
  application.

homepage:           https://github.com/tibbe/ekg
bug-reports:        https://github.com/tibbe/ekg/issues
license:            BSD3
license-file:       LICENSE
author:             Johan Tibell
maintainer:
  Johan Tibell <johan.tibell@gmail.com>,
  Mikhail Glushenkov <mikhail.glushenkov@gmail.com>

category:           System, Network
build-type:         Simple
data-files:
  assets/bootstrap-1.4.0.min.css
  assets/chart_line_add.png
  assets/cross.png
  assets/index.html
  assets/jquery-1.6.4.min.js
  assets/jquery.flot.min.js
  assets/monitor.css
  assets/monitor.js

extra-source-files:
  assets/bootstrap-1.4.0.css
  assets/jquery-1.6.4.js
  assets/jquery.flot.js
  CHANGES.md
  examples/Basic.hs
  LICENSE.icons
  LICENSE.javascript
  README.md

tested-with:
  GHC ==7.6.3
   || ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.3
   || ==8.10.1

library
  exposed-modules:
    System.Remote.Counter
    System.Remote.Gauge
    System.Remote.Label
    System.Remote.Monitoring

  other-modules:
    Paths_ekg
    System.Remote.Json
    System.Remote.Snap

  build-depends:
      aeson                 >=0.4 && <1.6
    , base                  >=4.5 && <4.15
    , bytestring            <1.0
    , ekg-core              >=0.1 && <0.2
    , ekg-json              >=0.1 && <0.2
    , filepath              <1.5
    , network               <3.2
    , snap-core             <1.1
    , snap-server           <1.2
    , text                  <1.3
    , time                  <1.10
    , transformers          <0.6
    , unordered-containers  <0.3

  ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/tibbe/ekg.git
